--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<script src = "javascript.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+    
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="header">
+        <div class="h-text">PLAY ROCK PAPER SCISSORS!</div>
+    </div>
+    <div class="inputs">
+        <button type="button" id="rock">
+            <img src="rock_pic.jpg">
+        </button>
+        <button type="button" id="paper">
+            <img src="pap_pic.jpg">
+        </button>
+        <button type="button" id="scissors">
+            <img src="scis_pic.jpg">
+        </button>
+    </div>
+    <div class="battleground">
+        <div class="res"> </div>
+    </div>
+    <div class="scoreboard">
+        <h3>SCORE</h3>
+        <div class=scrbrd>
+            <div class="plScore">0</div>
+            <h3> - </h3>
+            <div class="cpScore">0</div>
+        </div>
+    </div>
+    <div class="reset">
+        <button type="button" id="reset">RESET SCORE</button>
+    </div>
+    <script src="javascript2.js"></script>
+</body>
+</html>
+
